feat(voting): resend link and show token #54
